; ModuleID = '/home/carl/AnghaBench/linux/drivers/block/drbd/extr_drbd_state.c_apply_mask_val.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/block/drbd/extr_drbd_state.c_apply_mask_val.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%union.drbd_state = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @apply_mask_val to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @apply_mask_val(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca %union.drbd_state, align 4
  %5 = alloca %union.drbd_state, align 4
  %6 = alloca %union.drbd_state, align 4
  %7 = alloca %union.drbd_state, align 4
  %8 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %5, i32 0, i32 0
  store i32 %0, i32* %8, align 4
  %9 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %6, i32 0, i32 0
  store i32 %1, i32* %9, align 4
  %10 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %7, i32 0, i32 0
  store i32 %2, i32* %10, align 4
  %11 = bitcast %union.drbd_state* %5 to i32*
  %12 = load i32, i32* %11, align 4
  %13 = bitcast %union.drbd_state* %6 to i32*
  %14 = load i32, i32* %13, align 4
  %15 = xor i32 %14, -1
  %16 = and i32 %12, %15
  %17 = bitcast %union.drbd_state* %7 to i32*
  %18 = load i32, i32* %17, align 4
  %19 = or i32 %16, %18
  %20 = bitcast %union.drbd_state* %4 to i32*
  store i32 %19, i32* %20, align 4
  %21 = getelementptr inbounds %union.drbd_state, %union.drbd_state* %4, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
